// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot for an orphan user 1`] = `
<FeedBanner
  all={true}
  currentUser={
    Object {
      "avatarUrl": "me.png",
      "firstName": [Function],
      "memberships": Object {
        "count": [Function],
      },
    }
  }
  currentUserHasMemberships={false}
>
  <div
    data-stylename="banner all-groups"
  >
    <div
      data-stylename="image"
      style={
        Object {
          "backgroundImage": "url(/all-groups-banner.png)",
        }
      }
    >
      <div
        data-stylename="fade"
      >
        <div
          data-stylename="fade2"
        />
      </div>
      <div
        data-stylename="header"
      >
        <div
          data-stylename="logo all-logo"
          style={
            Object {
              "backgroundImage": "url(/white-merkaba.png)",
            }
          }
        />
        <div
          data-stylename="header-text"
        >
          <div
            data-stylename="header-contents"
          >
            <span
              data-stylename="header-name"
            >
              All My Groups
            </span>
            <div
              data-stylename="header-subtitle"
            >
              18 Groups
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</FeedBanner>
`;

exports[`postPromptString renders a post prompt string 1`] = `"Hi anybody, what would you like to create?"`;

exports[`postPromptString renders a post prompt string 2`] = `"Hi anybody, what's on your mind?"`;

exports[`renders for all groups 1`] = `
<FeedBanner
  all={true}
  currentUser={
    Object {
      "avatarUrl": "me.png",
      "firstName": [Function],
      "memberships": Object {
        "count": [Function],
      },
    }
  }
  currentUserHasMemberships={true}
>
  <div
    data-stylename="banner all-groups"
  >
    <div
      data-stylename="image"
      style={
        Object {
          "backgroundImage": "url(/all-groups-banner.png)",
        }
      }
    >
      <div
        data-stylename="fade"
      >
        <div
          data-stylename="fade2"
        />
      </div>
      <div
        data-stylename="header"
      >
        <div
          data-stylename="logo all-logo"
          style={
            Object {
              "backgroundImage": "url(/white-merkaba.png)",
            }
          }
        />
        <div
          data-stylename="header-text"
        >
          <div
            data-stylename="header-contents"
          >
            <span
              data-stylename="header-name"
            >
              All My Groups
            </span>
            <div
              data-stylename="header-subtitle"
            >
              18 Groups
            </div>
          </div>
        </div>
      </div>
    </div>
    <PostPrompt
      avatarUrl="me.png"
      firstName="Bob"
      promptStringFunc={[Function]}
      type=""
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          data-stylename="postPrompt"
        >
          <RoundImage
            data-stylename="prompt-image"
            small={true}
            url="me.png"
          >
            <div
              data-stylename="image small"
              style={
                Object {
                  "backgroundImage": "url(me.png)",
                }
              }
            />
          </RoundImage>
          Hi Bob, what's on your mind?
        </div>
        <div
          data-stylename="shadow"
        />
      </div>
    </PostPrompt>
  </div>
</FeedBanner>
`;

exports[`renders with a group 1`] = `
<FeedBanner
  group={
    Object {
      "avatarUrl": "avatar.png",
      "bannerUrl": "banner.png",
      "location": "space, duh",
      "name": "Spacebase",
    }
  }
>
  <div
    data-stylename="banner"
  >
    <div
      data-stylename="image"
      style={
        Object {
          "backgroundImage": "url(banner.png)",
        }
      }
    >
      <div
        data-stylename="fade"
      >
        <div
          data-stylename="fade2"
        />
      </div>
      <div
        data-stylename="header"
      >
        <div
          data-stylename="logo"
          style={
            Object {
              "backgroundImage": "url(avatar.png)",
            }
          }
        />
        <div
          data-stylename="header-text"
        >
          <div
            data-stylename="header-contents"
          >
            <span
              data-stylename="header-name"
            >
              Spacebase
            </span>
            <div
              data-stylename="header-subtitle"
            >
              <Icon
                data-stylename="header-icon"
                name="Location"
              >
                <span
                  className="icon-Location"
                  data-stylename="icon"
                />
              </Icon>
              space, duh
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</FeedBanner>
`;
